methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: ';' expected but 'true' found.
    if (estFaceMur())==true {
                       ^